--- a/public/style.css
+++ b/public/style.css
@@ -3,19 +3,20 @@
   margin: 0;
 }
 
+body {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-block: 2rem;
+}
+
 canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
+  border: 1px solid;
 }
 
 button {
   cursor: pointer;
-  left: 50%;
-  position: absolute;
-  transform: translateX(-50%);
-  top: 2rem;
   font-size: 1.5rem;
   padding: 0.5rem 1rem;
-  z-index: 10;
 }
